--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,11 @@ description = ""
 authors = [
     {name = "AnggaraNothing",email = "anggaranothing.other228@simplelogin.com"}
 ]
-license = {text = "LGPL-3.0-or-later"}
+license = "LGPL-3.0-or-later"
+license-files = [
+    "COPYING",
+    "COPYING.LESSER"
+]
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
