--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ dependencies = [
     "icecipher (>=1.0,<2.0)"
 ]
 
+[project.urls]
+repository = "https://github.com/anggaranothing/goldsrc-py-igatool"
+
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
@@ -24,4 +27,9 @@ build-backend = "poetry.core.masonry.api"
 [dependency-groups]
 dev = [
     "cx-freeze (>=8.4.1,<9.0.0)"
+]
+
+[tool.cxfreeze]
+executables = [
+    {script = "igatool.py"}
 ]
